# ShowCore-Open

./: .gitignore  CHANGE_LOG.md  README.md  build.gradle  settings.gradle
app/: build.gradle
app/libs/: webviewwrapper.aar
app/src/main/: AndroidManifest.xml
app/src/main/assets/wakeup/: lan2-xiao3-fei1.jet
app/src/main/cpp/: CMakeLists.txt  com_iflytek_ivw_IVWEngine.h  hlw.h  native-lib.cpp
app/src/main/jni/: com_iflytek_ivw_IVWEngine.h  com_iflytek_ivw_IVWEngine_IVWListener.h
app/src/main/res/anim/: page_enter.xml  page_exit.xml  page_pop_enter.xml  page_pop_exit.xml  setup_page_enter.xml  setup_page_exit.xml  setup_page_pop_enter.xml  setup_page_pop_exit.xml
app/src/main/res/anim-v21/: setup_page_enter.xml  setup_page_exit.xml  setup_page_pop_enter.xml  setup_page_pop_exit.xml
app/src/main/res/animator/: button_awake_animator.xml
evs_sdk/: build.gradle
evs_sdk/src/main/: AndroidManifest.xml
evs_sdk/src/main/jni/: com_iflytek_cyber_evs_sdk_codec_audio_opus_OpusCodec.h  com_iflytek_cyber_evs_sdk_codec_audio_speex_SpeexCodec.h
evs_sdk/src/main/jni/src/codec/speex/: CMakeLists.txt  SpeexCodec.cpp
evs_sdk/src/main/jni/src/codec/speex/src/: config.h
gradle/wrapper/: gradle-wrapper.properties
indicatorseekbar/: build.gradle
keepalive/: build.gradle
keepalive/src/main/: AndroidManifest.xml
ota/: build.gradle
showcoredemo/: build.gradle
showcoredemo/src/main/: AndroidManifest.xml
webviewwrapper/: build.gradle
webviewwrapper/src/main/: AndroidManifest.xml
webviewwrapper/src/main/assets/: WebViewJavascriptBridge.js
(+771 files in other folders)
